updated tests structuring in CMakeLists.txt (s) and added library interface

--- a/tests/binary/CMakeLists.txt
+++ b/tests/binary/CMakeLists.txt
@@ -1,8 +1,12 @@
-add_library(binary_tests OBJECT
+add_executable(ser_tests
+
     test_serializer.cpp
     test_deserializer.cpp
     test_integration.cpp
 )
 
-target_link_libraries(binary_tests PRIVATE ser_binary Catch2::Catch2WithMain)
-target_include_directories(binary_tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
+target_link_libraries(ser_tests PRIVATE Catch2::Catch2WithMain ser)
+
+add_test(NAME binary_tests COMMAND ser_tests)
+
+#add_test(NAME all_tests COMMAND ser_tests)
