changed license to MIT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
 project(eser LANGUAGES CXX)
 
+
+set(CPACK_PACKAGE_LICENSE "MIT")
 if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
     message(FATAL_ERROR "In-source builds are not allowed. Use: cmake -S . -B build")
 endif()
@@ -11,6 +13,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Interface library for header-only code
 add_library(eser INTERFACE)
+
+set_target_properties(eser PROPERTIES
+  VERSION 0.1.0
+  SOVERSION 0
+  PUBLIC_HEADER "eser/eser.hpp"
+)
 
 # Public include directory
 target_include_directories(eser INTERFACE
